# xisf

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: read.rs  to_fits.rs
examples/to_fits/: Cargo.toml
examples/to_fits/src/: main.rs
src/: data_block.rs  error.rs  image.rs  lib.rs  metadata.rs  property.rs  reference.rs  table.rs
src/data_block/: context.rs  sub_blocks.rs
src/image/: color_filter_array.rs  display_function.rs  fits_keyword.rs  icc_profile.rs  image_data.rs  resolution.rs  rgb_working_space.rs  thumbnail.rs
tests/: filegen.rs
tests/files/: 2ch.xisf  gradient.bin.lz4  gradient.bin.zlib  gradient.bin.zst  test.xisf
