[workspace]
members = ["examples/to_fits"]

[workspace.dependencies]
error-stack = "0.4.0"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
ndarray = "0.15.6"

[package]
name = "xisf-rs"
description = "Decoder (eventually encoder) for the XISF astronomy image file format"
categories = ["parser-implementations", "multimedia::images", "science"]
keywords = ["astronomy"]
repository = "https://github.com/wrenby/xisf"
documentation = "https://docs.rs/xisf-rs"
readme = "README.md"
license = "MIT"
version = "0.0.3"
edition = "2021"
rust-version = "1.64.0"
exclude = ["tests/**"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["remote-http", "remote-ftp"]
remote-http = ["dep:ureq"]
remote-ftp = ["dep:remotefs", "dep:remotefs-ftp"]

[dependencies]
error-stack = { version = "0.4.0", features = ["spantrace"] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
byteorder = "1.4.3"
libxml = "0.3.3"
url = "2.4.0"
ndarray = "0.15.6"
num-complex = { version = "0.4.3", features = ["bytemuck"] }
strum = { version = "0.25.0", features = ["derive"] }
parse_int = "0.6.0"
uuid = { version = "1.4.1", features = ["v4"] }
hex-simd = { version = "0.8.0", features = ["alloc"] }
base64-simd = "0.8.0"
num-traits = "0.2.16"
lz4 = "1.24.0"
flate2 = "1.0.27"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
digest = "0.10.7"
bytemuck = "1.13.1"
ordered-multimap = "0.7.0"
time = { version = "0.3.28", features = ["parsing"] }
zstd = "0.12.4"
ureq = { version = "2.7.1", optional = true }
remotefs = { version = "0.2.0", optional = true }
remotefs-ftp = { version = "0.1.3", default-features = false, optional = true }

[dev-dependencies]
lcms2 = "6.0.0"

[target.'cfg(not(docsrs))'.dev-dependencies]
testcontainers = "0.14.0"
