[workspace]
members = ["examples/to_fits"]

[workspace.dependencies]
error-stack = "0.4.0"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
ndarray = "0.15.6"

[package]
name = "xisf-rs"
description = "Reader (eventually writer) library for the XISF astronomy image file format"
categories = ["parser-implementations", "multimedia::images", "science", "encoding"]
keywords = ["astronomy"]
repository = "https://github.com/wrenby/xisf"
documentation = "https://docs.rs/xisf-rs"
readme = "README.md"
license = "Apache-2.0 OR MIT"
version = "0.0.4"
edition = "2021"
rust-version = "1.67.0"
exclude = ["tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
remote-http = ["dep:ureq"]
remote-ftp = ["remotefs", "dep:remotefs-ftp"]
remotefs = ["dep:remotefs"]
f128 = ["dep:f128"]

[dependencies]
error-stack = { version = "0.4.1", features = ["spantrace"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
byteorder = "1.5.0"
libxml = "0.3.3"
url = "2.4.1"
ndarray = "0.15.6"
num-complex = { version = "0.4.4", features = ["bytemuck"] }
strum = { version = "0.26.2", features = ["derive"] }
parse_int = "0.6.0"
uuid = { version = "1.5.0", features = ["v4"] }
hex-simd = { version = "0.8.0", features = ["alloc"] }
base64-simd = "0.8.0"
num-traits = "0.2.18"
lz4 = "1.24.0"
flate2 = "1.0.28"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
digest = "0.10.7"
bytemuck = { version = "1.15.0", features = ["extern_crate_std"] }
ordered-multimap = "0.7.1"
time = { version = "0.3.34", features = ["parsing"] }
zstd = "0.13.0"
ureq = { version = "2.9.6", optional = true }
remotefs = { version = "0.2.0", optional = true }
remotefs-ftp = { version = "0.1.3", default-features = false, optional = true }
delegate = "0.12.0"
# git dependency because my pull requests haven't made it into the crates.io version yet
f128 = { git = "https://github.com/jkarns275/f128", features = ["bytemuck"], optional = true }

[dev-dependencies]
lcms2 = "6.0.0"
testcontainers = "0.15.0"
