[package]
name = "to_fits"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "to_fits"

[dependencies]
xisf = { path = "../../" }
error-stack = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
tracing-subscriber = "0.3.17"
tracing-error = "0.2.0"
supports-color = "2.0.0"
supports-unicode = "2.0.0"
fitsio = "0.21.2"